--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,22 @@
 body {
   text-align: center;
 }
+
+.app-container {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0.1);
+  color: white;
+}
+
+.app-container::before {
+  content: '';
+  background: url('./images/sunset.jpg') no-repeat center center/cover;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
