--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-body {
+/* body {
   text-align: center;
-}
+} */
 
 .app-container {
   width: 100%;
@@ -19,4 +19,17 @@ body {
   top: 0;
   left: 0;
   z-index: -1;
+}
+
+.app {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 0 1rem;
+  gap: 200px;
+}
+
+.bottom {
+  display: flex;
+  justify-content: space-between;
 }
