Add search and functionalities

--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,12 @@
   padding: .7rem 1.5rem;
   font-size: 1.2rem;
   border-radius: 25px;
-  border: 1px solid rgba(255, 255, 255, 0.2);
+  border: 1px solid rgba(255, 255, 255, 0.8);
+  background: rgba(255, 255, 255, 0.2);
+}
+
+::placeholder {
+  color: white;
 }
 
 .app-container::before {
